# ccv_mppi_path_tracker

./: CMakeLists.txt  package.xml
config/: config.rviz  dkanconfig.rviz  pure_pursuit.rviz  ref_path.rviz
data/: data.csv
include/ccv_mppi_path_tracker/: ccv_mppi_path_tracker.h  diff_drive.h  diff_drive_kinematics.h  diff_drive_mppi.h  dkan_path_creater.h  full_body_mppi.h  reference_path_creater.h  spline.h  steering_diff_drive.h  steering_diff_drive_mppi.h
launch/: diff_drive_mppi.launch  diff_drive_mppi_path_tracker.launch  dkan_diff_drive_mppi.launch  emptyWorld_diff_drive_mppi.launch  frames.gv  full_body_mppi.launch  pure_pursuit.launch  reference_path_creator.launch  steering_diff_drive_mppi.launch
log/: 20241012_143754.csv
log/full_body/: controller_roll_zmp_relation.ods
log/mppi/: .~lock.v:2.0_A:1.0_f:0.25.csv#  20241012_170250.csv  20241012_170659.csv  20241012_170830.csv  20241012_170959.csv  20241012_171247.csv  20241012_171445.csv  20241012_171539.csv  20241012_171638.csv  20241012_171733.csv  20241012_171920.csv  20241012_172001.csv  20241012_172607.csv  20241012_172633.csv  20241012_173043.csv  20241012_173113.csv  20241012_173409.csv  20241012_173527.csv  20241012_174407.csv  20241012_174745.csv  20241013_140630.csv  20241013_140758.csv  20241013_140903.csv  20241013_141723.csv  20241013_141822.csv  20241013_142217.csv  20241013_142553.csv  20241013_142849.csv  20241013_143024.csv  20241013_143129.csv  20241013_143227.csv  20241013_143316.csv  20241013_143435.csv  20241013_150950.csv  20241013_151019.csv  20241013_151102.csv
log/pure_pursuit/: 20241011_143631.csv  20241012_174212.csv  20241012_174514.csv  20241012_174544.csv  20241012_174840.csv  20241012_174911.csv  20241012_175039.csv  20241012_175137.csv
src/: calc_curveture.py  calc_e_rmse.py  ccv_mppi_path_tracker.cpp  diff_drive_inputs_relation_graph.py  diff_drive_mppi.cpp  dkan_path_creater.cpp  dkan_path_creator.cpp  for_plot.py  full_body_mppi.cpp  full_body_mppi_record_for_debug.py  graph.py  graph2.py  graph3.py  record_for_debug.py  record_state.py  ref_path_analyze.py  reference_path_creater.cpp  reference_path_creator.cpp  reference_path_creator.py  steering_diff_drive_inputs_relation_graph.py  steering_diff_drive_mppi.cpp  v_w_performance.py  zmp_graph.py  zmp_graph2.py
